--- a/styles.css
+++ b/styles.css
@@ -28,7 +28,7 @@ h3 {
   align-items: center;
   text-align: center;
   background-color: rgb(59, 63, 65);
-  height: 60vh;
+  height: 80vh;
 }
 
 h1 {
@@ -67,4 +67,15 @@ button:hover {
 
 #reset {
   width: auto;
+}
+
+@media (max-width: 400px) {
+  .container {
+    flex-direction: column;
+    height: auto;
+  }
+  h3 {
+    font-size: 40px;
+    margin-bottom: 50px;
+  }
 }
